--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   </head>
 
   <body>
-
+    <div>
+      <input type="file" id="fileInput" multiple accept="image/*">
+      <div class="preview-list" id="previewList"></div>
+      <button type="button" id="submitBtn">Отправить</button>
+    </div>
     <script src="js/index.ts" type="module"></script>
   </body>
 </html>
